--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk/google": "^3.0.2",
     "@mendable/firecrawl-js": "^4.10.0",
     "@notionhq/client": "^2.2.15",
+    "@steipete/sweet-cookie": "^0.1.0",
     "ai": "^6.0.5",
     "node-cron": "^3.0.3",
     "zod": "^3.24.0"
